# solar-works-enerflo

./: .gitignore  .prettierignore  .prettierrc  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: cloud-functions.yaml  main.yaml
db/: bigquery.py
enerflo/: enerflo_repo.py  enerflo_service.py
enerflo/pipeline/: customers.py
src/: bigquery.service.ts  index.ts  logging.service.ts
src/enerflo/: enerflo.service.test.ts  enerflo.service.ts
src/pipeline/: pipeline.const.ts  pipeline.service.test.ts  pipeline.service.ts
test/: test_units.py
